tests/examples/bad/class_member_field_type_void.lat
int main() {
    return 1;
}
 
class A {
    int a;
    void b;
}

